SUBDIRS=plugins
EXTRA_DIST=darktable-16.png darktable-32.png darktable-48.png darktable.png off.png
pxdatarootdir=$(datarootdir)/darktable/pixmaps
pxdataroot_DATA=darktable-16.png darktable-32.png darktable-48.png darktable.png off.png
# for .desktop:
pixmapdatarootdir=$(datarootdir)/pixmaps
pixmapdataroot_DATA=darktable.png
